--- a/Announcements/app/src/main/res/values/strings.xml
+++ b/Announcements/app/src/main/res/values/strings.xml
@@ -17,18 +17,15 @@
 <resources>
     <string name="app_name">Announcements</string>
     <string name="title_activity_chat">Chat Activity</string>
-    <string name="new_chat">New Chat</string>
     <string name="my_registration_id">Registration Id: %1$d</string>
     <string name="enter_a_message">Enter a message</string>
-    <string name="send">Send</string>
-    <string name="enter_a_regid">Enter a registration id</string>
     <string name="subject">Subject</string>
     <string name="start_chat">Start Chat</string>
+    <string name="user_id_not_found">Unable to find user %1$s</string>
     <string name="start">Start</string>
-    <string name="chats">Chats</string>
-    <string name="not_valid_regid">Not a valid registration id</string>
 
     <string name="no_subject">No subject</string>
+    <string name="subject_required">Subject is required</string>
 
     <string name="conversation_unknown">Unsupported message</string>
     <string name="conversation_joined_the_chat">%1$s joined the chat</string>
