Updates to align with the R8 SDK release.
- Removed google-services.json placholder files from examples that don't support push or google sign-in.
- Improved instructions on setting keystore properties.
- Other improvements to the examples.

Ref#712

--- a/DataTransfer/app/src/main/res/values/strings.xml
+++ b/DataTransfer/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="connection_error">Connection Error: %1$s</string>
 
     <string name="my_registration_id">My RegId: %1$d</string>
+    <string name="my_user_name">User Name: %1$s</string>
 
     <string name="error_creating_connection">Unable creating data connection, %1$s</string>
     <string name="start_data_connection">Start Data Connection</string>
