--- a/Announcements/app/src/main/res/values/strings.xml
+++ b/Announcements/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="app_name">Announcements</string>
     <string name="title_activity_chat">Chat Activity</string>
     <string name="my_registration_id">Registration Id: %1$d</string>
+    <string name="my_user_name">User Name: %1$s</string>
     <string name="enter_a_message">Enter a message</string>
     <string name="subject">Subject</string>
     <string name="start_chat">Start Chat</string>
