--- a/SoftPhone/app/src/main/res/values/strings.xml
+++ b/SoftPhone/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="in_active_call">In a call with %1$s</string>
 
     <string name="my_registration_id">My RegId: %1$d</string>
+    <string name="my_user_name">User Name: %1$s</string>
 
     <string name="call_quality_poor">Limited Network Connection</string>
 
