--- a/Whiteboard/app/src/main/res/values/strings.xml
+++ b/Whiteboard/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="rationale_write_external_storage">BBM Enterprise requires access to your device storage to save files from the camera and save images and files sent by your contacts.</string>
     <string name="invite_to_whiteboard">Invite User</string>
     <string name="user_id_not_found">Unable to find user %1$s</string>
+    <string name="my_user_name">User Name: %1$s</string>
 </resources>
